--- a/config/database.yml
+++ b/config/database.yml
@@ -14,16 +14,20 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.mysql2
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+   adapter: mysql2
+   database: maxenterprise
+   username: root
+   password: Mysql123
+   host: localhost
+  
 test:
-  <<: *default
-  database: db/test.mysql2
-
+   adapter: mysql2
+   database: maxenterprise
+   username: root
+   password: Mysql123
+   host: localhost
+   
 production:
-  <<: *default
-  database: db/production.postgresql
+   adapter: postgresql
+   database: maxenterprise
+   host: localhost
